# TEP

./: .env-test  .env.example  .gitignore  DEPLOYMENT.md  DEVICE_RECOVERY_GUIDE.md  ENVIRONMENT_DATABASE_SETUP.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  alembic.ini  coverage.json  generate_dummy_data.py  package-lock.json  pyproject.toml  requirements.txt  rsa_private_key.pem  run_server.py  tap.spec  tep_test.sqlite  tmpclaude-ab54-cwd  words.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
alembic/: env.py
alembic/versions/: 0ecdf8d236f3_add_recurring_holiday_pattern_support.py  115c1d632cbe_add_fingerprint_fields_to_registered_.py  368a2b616435_initialize_database.py  505e24a154d7_initialize_database.py  5362b620d2b9_initialize_database.py  6f5391cead75_add_registereddevice_model_and_external_.py  720a5d22f5cc_simplify_license_model_remove_signature.py  a1b2c3d4e5f6_add_active_session_tracking.py  b2c3d4e5f6a7_create_licenses_table.py  c3d4e5f6a7b8_create_system_settings_table.py  d4e5f6a7b8c9_update_license_model_for_activation.py  e5f6a7b8c9d0_add_performance_indexes.py  e8d85efb49ca_initialize_database.py  f6a7b8c9d0e1_add_single_active_license_constraint.py
frontend/: README.md  angular.json  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth-roles.spec.ts  auth.spec.ts  employees.spec.ts  event-logs.spec.ts  example.spec.ts  navigation.spec.ts  org-units.spec.ts  reports.spec.ts  settings.spec.ts  timeclock.spec.ts  users.spec.ts
frontend/src/: index.html  styles.scss
frontend/tests-examples/: demo-todo-app.spec.ts
installer/: tap-installer.nsi  tep-installer.nsi
license_server/: README.md  __init__.py  database.py  key_generator.py  license_server.db  license_tool.py  main.py  models.py  requirements.txt  schemas.py  words.txt
scripts/: apply-update.ps1  backup_database.py  build_release.py  init_database.py  install-service.ps1  restore_database.py
src/: auth.py  config.py  constants.py  database.py  health.py  main.py  scheduler.py  services.py
src/auth/: auth.py  models.py  (+5 more)
tests/: conftest.py
tools/: license_generator.py
(+348 files in other folders)
