[project]
name = "TEP"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Losee",email = "nathan.d.losee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
package-mode = false
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
bandit = "^1.8.3"
safety = "^3.3.1"
pynguin = "^0.40.0"
pytest-cov = "^6.1.1"
